# src/validators/todo.validators.js
@@ -1,4 +1,5 @@
-import { body, query } from "express-validator";
+import { body, query, param } from "express-validator";
+
 const createTodoValidator = () => {
   return [
     body("title").trim().notEmpty().withMessage("Todo title is required"),
@@ -6,4 +7,20 @@ const createTodoValidator = () => {
   ];
 };
 
-export { createTodoValidator };
+const getAllTodosQueryValidators = () => {
+  return [
+    query("query").optional(),
+    query("complete")
+      .optional()
+      .isBoolean({ loose: true })
+      .withMessage("complete flag must be a boolean."),
+  ];
+};
+
+const getByIdValidator = (idName) => {
+  return [
+    param(idName).notEmpty().isMongoId().withMessage(`Invalid ${idName}`),
+  ];
+};
+
+export { createTodoValidator, getAllTodosQueryValidators, getByIdValidator };
